LOAD-38961: revert URI to URL (#114)
Co-authored-by: JérômeLassus <j.lassus@tricentins.com>